Preparation for introducing Ewald summation

--- a/equations/emdee.tex
+++ b/equations/emdee.tex
@@ -148,4 +148,17 @@ Therefore,
 \end{align}
 \end{subequations}
 
+\section{Ewald Sum}
+
+\subsection{Fourier Part}
+
+Let $\rho(\vt r)$ be the charge density at a point $\vt r$ inside an orthorhombic box with side lengths $L_1$, $L_2$, and $L_3$ under periodic boundary conditions. Considering three-dimensional Gaussian distributions at atomic positions with standard deviation $\sigma$, we have:
+\begin{equation*}
+\rho(\vt r) = \sum_{j=1}^N \sum_{\vt n} \frac{q_j}{(2\pi\sigma^2)^{3/2}}\exp\left[-\frac{\|\vt r - (\vt r_j + \mt L\vt n)\|^2}{2\sigma^2}\right],
+\end{equation*}
+where $\mt L = \text{diag}(L_1,L_2,L_3)$. Applying Fourier transform with integer wave-vectors $\vt k$:
+\begin{equation*}
+\rho(\vt k) = \int \exp\left(-2\pi i \tr{\vt k} {\mt L}^{-1}{\vt r} \right) \rho(\vt r) d\vt r
+\end{equation*}
+
 \end{document}
