Fourier part of Ewald sum implemented Pending tasks are: 1) Self-Part of energy and forces 2) Discount of intramolecular long-range parts 3) Implementation of Ewald's virial computations

--- a/equations/emdee.tex
+++ b/equations/emdee.tex
@@ -7,6 +7,7 @@
 \newcommand{\vt}[1]{\boldsymbol{\mathbf{#1}}}           % vector symbol
 \newcommand{\tr}[1]{#1^\text{t}}                        % transposition
 \newcommand{\diff}[2]{\frac{\partial #1}{\partial #2}}  % partial derivative
+\newcommand{\im}{\hat{\i}}                              % imaginary number
 
 \begin{document}
 
@@ -150,32 +151,145 @@ Therefore,
 
 \section{Ewald Sum with Type-Pair-Specific Scaling}
 
+\subsection{Real Part}
+
+\begin{equation*}
+U_\text{short} = \frac{k_e}{\epsilon} \sum_{i=1}^{N-1} \sum_{j=i+1}^N q_i q_j \frac{\text{erfc}(\alpha r_{ij})}{r_{ij}}
+\end{equation*}
+
 \subsection{Fourier Part}
 
 Conventionally, for a simulation box with periodic boundary conditions, the long-range electrostatic part of the potential energy is written as
 \begin{equation*}
-U_\text{long} = \frac{2\pi k_e} {\epsilon V}\sum_{\vt n \neq \vt 0} \frac{e^{-\frac{\|\vt k\|^2}{4\alpha^2}}}{\|\vt k\|^2} \sum_m \sum_n q_m q_n e^{i \tr{\vt k}({\vt r}_m - {\vt r}_n)},
+U_\text{long} = \frac{2\pi k_e}{\epsilon V} \sum_{\vt n \neq \vt 0} \frac{e^{-\frac{k^2}{4\alpha^2}}}{k^2} \sum_{i=1}^N \sum_{j=1}^N q_i q_j e^{\im \tr{\vt k}({\vt r}_i - {\vt r}_j)},
 \end{equation*}
-where $k_e$ is Coulomb's constant ($k_e = \frac{1}{4\pi\epsilon_0}$), $\epsilon$ is a dielectric constant, $V$ is the box volume, $\vt n$ is a vector in $\mathbb Z^3$ (integer lattice), $\vt k = 2\pi \vt L^{-1}{\vt n}$ is a reciprocal space vector, and $k = \|\vt k\|$ is the norm of $\vt k$. The long-range part of the potential energy is
+where $k_e$ is Coulomb's constant ($k_e = \frac{1}{4\pi\epsilon_0}$), $\epsilon$ is a dielectric constant, $V$ is the box volume, $\vt n \in \mathbb Z^3$ is an integer lattice vector, $\vt k = 2\pi \vt L^{-1}{\vt n}$ is a reciprocal space vector, $k = \|\vt k\|$ is the norm of $\vt k$, and $\im$ is the imaginary unit (that is, $\im^2 = -1$). The summations over indices $i$ and $j$ run for all atoms, which allows us to split them as follows,
 \begin{equation*}
-U_\text{long} = \frac{2\pi k_e}{\epsilon V}\sum_{\vt n \neq \vt 0} \frac{e^{-\frac{k^2}{4\alpha^2}}}{k^2} \left(\sum_j q_j e^{i \tr{\vt k}{\vt r}_j} \right) \left(\sum_m q_m e^{-i \tr{\vt k}{\vt r}_m}\right),
+U_\text{long} = \frac{2\pi k_e}{\epsilon V}\sum_{\vt n \neq \vt 0} \frac{e^{-\frac{k^2}{4\alpha^2}}}{k^2} \Bigg(\sum_{i=1}^N q_i e^{\im \tr{\vt k}{\vt r}_i} \Bigg) \Bigg(\sum_{j=1}^N q_j e^{-\im \tr{\vt k}{\vt r}_j}\Bigg).
 \end{equation*}
 
-Given that $S(\vt g) = \sum_j q_j e^{i \tr{\vt g}{\vt r}_j}$ is defined as the structure factor of the system, we observe that $\overline{S(\vt g)} = \sum_j q_j e^{-i \tr{\vt g}{\vt r}_j}$ is the complex conjugate of $S(\vt g)$ and, therefore,
+Defined as $S(\vt k) = \sum_i q_i e^{\im \tr{\vt k}{\vt r}_i}$, the structure factor of the system charges can be identified in the equation above, as well as its complex conjugate ${\overline S}(\vt k)$. Therefore, we can write
 \begin{equation*}
-U_\text{long} = \frac{2\pi k_e}{\epsilon V}\sum_{\vt n \neq \vt 0} \frac{e^{-\frac{g^2}{4\alpha^2}}}{g^2} |S(\vt g)|^2.
+U_\text{long} = \frac{2\pi k_e}{\epsilon V}\sum_{\vt n \neq \vt 0} \frac{e^{-\frac{k^2}{4\alpha^2}}}{k^2} |S(\vt k)|^2.
 \end{equation*}
 
-Now consider that electrostatic interactions between atoms of types $J$ and $K$ are scaled by a prefactor $\lambda_{JK} = \lambda_{KJ} = k_e/\epsilon_{JK}$. In this case, one can express the long-range part of the box energy as
+Now consider that the electrostatic interactions between any atom $i$ of type $I$ with any atom $j$ of type $J$ are scaled by a factor $\lambda_{IJ} = \lambda_{JI} = k_e/\epsilon_{IJ}$. In this case, one can alternatively express the long-range potential per unit box as
 \begin{equation*}
-U_\text{long} = \frac{2\pi}{V}\sum_{\vt n \neq \vt 0} \frac{e^{-\frac{g^2}{4\alpha^2}}}{g^2} \sum_J \sum_K \lambda_{JK} \sum_{j \in J} \sum_{k \in K} q_j q_k e^{i \tr{\vt g}({\vt r}_j - {\vt r}_k)},
+U_\text{long} = \frac{2\pi}{V}\sum_{\vt n \neq \vt 0} \frac{e^{-\frac{k^2}{4\alpha^2}}}{k^2} \sum_{I=1}^n \sum_{J=1}^n \lambda_{IJ} \sum_{i \in I} \sum_{j \in J} q_i q_j e^{\im \tr{\vt k}({\vt r}_i - {\vt r}_j)}.
 \end{equation*}
 
-If we now define $S_J(\vt g) = \sum_{j \in J} q_j e^{i \tr{\vt g}{\vt r}_j}$ as the structure factor resulting from the atoms of type $J$ alone, we have
+It is then convenient to define a type-specific structure factor $S_I(\vt k) = \sum_{i \in I} q_i e^{\im \tr{\vt k}{\vt r}_i}$, which depends solely on the charges and positions of atoms of type $I$. From such definition we can again split the summations over $i$ and $j$ to write
 \begin{equation}
 \label{eq:U_long_by_types_1}
-U_\text{long} = \frac{2\pi}{V}\sum_{\vt n \neq \vt 0} \frac{e^{-\frac{g^2}{4\alpha^2}}}{g^2} \sum_J \sum_K \lambda_{JK} S_J(\vt g) \overline{S_K(\vt g)}.
+U_\text{long} = \frac{2\pi}{V}\sum_{\vt n \neq \vt 0} \frac{e^{-\frac{k^2}{4\alpha^2}}}{k^2} \sum_{I=1}^n \sum_{J=1}^n \lambda_{IJ} S_I(\vt k) \overline{S_J}(\vt k).
 \end{equation}
+
+The fact that $\lambda_{IJ} = \lambda_{JI}$ for every type pair implies that all imaginary terms in the double above will cancel out, allowing us to simplify the equation as
+\begin{equation}
+\label{eq:U_long_by_types_dot}
+U_\text{long} = \frac{2\pi}{V}\sum_{\vt n \neq \vt 0} \frac{e^{-\frac{k^2}{4\alpha^2}}}{k^2} \sum_{I=1}^n \sum_{J=1}^n \lambda_{IJ} [S_I(\vt k) \cdot S_J(\vt k)],
+\end{equation}
+where the dot product between two complex numbers $x_i = a_i + \im b_i$ and $x_j = a_j + \im b_j$ is a commutative operation defined so that $x_i \cdot x_j = a_i a_j + b_i b_j$. Finally, we define $\sigma_I(\vt k) = \sum_{J=1}^n \lambda_{IJ} S_J(\vt k)$ and rewrite Eq.~\ref{eq:U_long_by_types_dot} as
+\begin{equation*}
+U_\text{long} = \frac{2\pi}{V}\sum_{\vt n \neq \vt 0} \frac{e^{-\frac{k^2}{4\alpha^2}}}{k^2} \sum_{I=1}^n S_I(\vt k) \cdot \sigma_I(\vt k).
+\end{equation*}
+
+Differentiating with respect to the position $\vt r_i$ of an atom $i \in I$, we have
+\begin{equation*}
+\frac{\partial U_\text{long}}{\partial \vt r_i} = \frac{2\pi}{V}\sum_{\vt n \neq \vt 0} \frac{e^{-\frac{k^2}{4\alpha^2}}}{k^2} \sum_{J=1}^n \left[ S_J(\vt k) \cdot \frac{\partial \sigma_J}{\partial \vt r_i} + \sigma_J(\vt k) \cdot \frac{\partial S_J}{\partial \vt r_i}\right],
+\end{equation*}
+where a trivial scalar$\cdot$vector generalization of the dot product has been employed. We then note that $\partial S_J / \partial \vt r_i = \vt 0$ for all $J \neq I$, which makes $\partial \sigma_J / \partial \vt r_i = \lambda_{IJ} {\partial S_I}/{\partial \vt r_i}$ and, therefore,
+\begin{align*}
+\frac{\partial U_\text{long}}{\partial \vt r_i} &= \frac{2\pi}{V}\sum_{\vt n \neq \vt 0} \frac{e^{-\frac{k^2}{4\alpha^2}}}{k^2} \left[ \sigma_I(\vt k) \cdot \frac{\partial S_I}{\partial \vt r_i} + \sum_{J=1}^n S_J(\vt k) \cdot \left( \lambda_{IJ} \frac{\partial S_I}{\partial \vt r_i} \right) \right] = \\
+&= \frac{4\pi}{V}\sum_{\vt n \neq \vt 0} \frac{e^{-\frac{k^2}{4\alpha^2}}}{k^2} \left[ \sigma_I(\vt k) \cdot \frac{\partial S_I}{\partial \vt r_i} \right].
+\end{align*}
+
+From the definition of $S(\vt k)$, we obtain $\frac{\partial S_I}{\partial \vt r_i} = \im q_i e^{\im \tr{\vt k}{\vt r}_i} \vt k$. It is thus convenient to employ the anti-commutative cross product $x_i \times x_j = (\im x_i) \cdot x_j = a_ib_j- b_ia_j$. In this way, we have
+\begin{equation*}
+{\vt F}_i = -\frac{\partial U_\text{long}}{\partial \vt r_i} = \frac{4\pi}{V} q_i \sum_{\vt n \neq \vt 0} \frac{e^{-\frac{k^2}{4\alpha^2}}}{k^2} [ \sigma_I(\vt k) \times e^{\im \tr{\vt k}{\vt r}_i} ]{\vt k}.
+\end{equation*}
+
+\section{DRAFT}
+
+For computational efficiency:
+\begin{equation*}
+U_\text{long} = \frac{2\pi}{V}\sum_{\vt n \neq \vt 0} \frac{e^{-\frac{k^2}{4\alpha^2}}}{k^2} \sum_I \bigg\{\lambda_{II} \|S_I(\vt k)\|^2 + 2 S_I(\vt k) \cdot \sum_{J > I} \lambda_{IJ} S_J(\vt k)\bigg\}.
+\end{equation*}
+
+Note that a position $\vt r_i$ only affects the structure factor of a type $I$ if $i \in I$. In order to facilitate differentiation, we extract from $U_\text{long}$ all terms that involve a given type $I$, which is
+\begin{equation*}
+U_I = \frac{2\pi}{V}\sum_{\vt n \neq \vt 0} \frac{e^{-\frac{k^2}{4\alpha^2}}}{k^2} \bigg\{\lambda_{II} \|S_I(\vt k)\|^2 + 2 \bigg(\sum_{J \neq I} \lambda_{IJ} S_J(\vt k)\bigg) \cdot S_I(\vt k) \bigg\},
+\end{equation*}
+
+Taking the derivative with respect to $\vt r_i$:
+\begin{equation*}
+\frac{\partial U_I}{\partial \vt r_i} = \frac{2\pi}{V}\sum_{\vt n \neq \vt 0} \frac{e^{-\frac{k^2}{4\alpha^2}}}{k^2} \bigg\{2 \lambda_{II} S_I(\vt k) + 2 \bigg(\sum_{J \neq I} \lambda_{IJ} S_J(\vt k)\bigg) \bigg\}  \cdot \frac{\partial S_I}{\partial \vt r_i},
+\end{equation*}
+
+Therefore,
+\begin{equation*}
+\frac{\partial U_I}{\partial \vt r_i} = \frac{4\pi}{V} \sum_{\vt n \neq \vt 0} \frac{e^{-\frac{k^2}{4\alpha^2}}}{k^2} \bigg[ \sum_J \lambda_{IJ} S_J(\vt k) \bigg] \cdot \frac{\partial S_I}{\partial \vt r_i},
+\end{equation*}
+
+\begin{equation*}
+\frac{\partial S_I}{\partial \vt r_i} = \im q_i e^{\im \tr{\vt k}{\vt r}_i}{\vt k}
+\end{equation*}
+
+Defining:
+\begin{equation*}
+\sigma_I(\vt k) = \sum_J \lambda_{IJ} S_J(\vt k)
+\end{equation*}
+
+\begin{equation*}
+\frac{\partial U_I}{\partial \vt r_i} = \frac{4\pi}{V} \sum_{\vt n \neq \vt 0} \frac{e^{-\frac{k^2}{4\alpha^2}}}{k^2} \sigma_I(\vt k) \cdot \frac{\partial S_I}{\partial \vt r_i},
+\end{equation*}
+
+\begin{equation*}
+\frac{\partial U_I}{\partial \vt r_i} = \frac{4\pi q_i}{V} \sum_{\vt n \neq \vt 0} \frac{e^{-\frac{k^2}{4\alpha^2}}}{k^2} [\sigma_I(\vt k) \times e^{\im \tr{\vt k}{\vt r}_i}]{\vt k},
+\end{equation*}
+
+\section{DRAFT}
+
+
+\begin{equation*}
+U_\text{long} = \frac{2\pi}{V}\sum_{\vt n \neq \vt 0} \frac{e^{-\frac{k^2}{4\alpha^2}}}{k^2} \sum_I S_I(\vt k) \cdot \Bigg[
+\lambda_{II}S_I(\vt k) + \sum_{J \neq I} \lambda_{IJ} S_J(\vt k)\Bigg],
+\end{equation*}
+
+
+
+Force:
+\begin{equation*}
+\frac{\partial}{\partial \vt r_n}(S_I \cdot S_J) = S_I \cdot \frac{\partial S_J}{\partial \vt r_n} + S_J \cdot \frac{\partial S_I}{\partial \vt r_n},
+\end{equation*}
+
+\begin{equation*}
+\frac{\partial S_I}{\partial \vt r_n} = \begin{cases}
+\im q_n e^{\im \tr{\vt k}{\vt r}_n}{\vt k} & \text{if} \; n \in I \\
+0 & \text{if} \; n \notin I
+\end{cases}
+\end{equation*}
+
+\begin{equation*}
+e^{\im \tr{\vt k}{\vt r}_i} = \cos(\tr{\vt k}{\vt r}_i) + \im \sin(\tr{\vt k}{\vt r}_i)
+\end{equation*}
+
+
+
+\begin{equation}
+\label{eq:U_long_by_types_1}
+U_\text{long} = \frac{2\pi}{V}\sum_{\vt n \neq \vt 0} \frac{e^{-\frac{k^2}{4\alpha^2}}}{k^2} \Bigg\{ \sum_I \lambda_{II} \|S_I(\vt k)\|^2 + 2 \sum_{J>I} \lambda_{IJ} [S_I(\vt k) \cdot S_J(\vt k)] \Bigg\},
+\end{equation}
+where a dot product between two complex numbers is defined so that
+\begin{equation*}
+(a_1 + \im b_1)\cdot(a_2 + \im b_2) = a_1 a_2 + b_1 b_2.
+\end{equation*}
+
+The derivative of a structure factor $S_I(\vt k)$
+\begin{equation*}
+\frac{\partial S_I}{\partial \vt r_i} = \im q_i e^{\im \tr{\vt k}{\vt r}_i} \vt k
+\end{equation*}
+
 
 In order the further develop equation above, let us define $a_j = q_j \cos(\tr{\vt g}{\vt r}_j)$ and $b_j = q_j \sin(\tr{\vt g}{\vt r}_j)$, so that $q_j e^{i \tr{\vt g}{\vt r}_j} = a_j + ib_j$. Thus,
 \begin{equation*}
@@ -215,6 +329,12 @@ F_j = \frac{4\pi}{V}\sum_{\vt n \neq \vt 0} \frac{e^{-\frac{k^2}{4\alpha^2}}}{k^
 \end{equation*}
 
 \section{DRAFT}
+\begin{equation*}
+(a_i + \im b_i)\cdot(-b_j + \im a_j) = -a_i b_j + b_i a_j.
+\end{equation*}
+\begin{equation*}
+(-b_i + \im a_i)\cdot(a_j + \im b_j) = -b_i a_j + a_i b_j.
+\end{equation*}
 
 
 where $S_J = \sum_{j \in J} q_j e^{i \tr{\vt g}{\vt r}_j}$ is the structure factor resulting from the atoms of type $J$ alone. If we define $a_j = q_j \cos(\tr{\vt g}{\vt r}_j)$ and $b_j = q_j \sin(\tr{\vt g}{\vt r}_j)$, so that $q_j e^{i \tr{\vt g}{\vt r}_j} = a_j + ib_j$, then we have
